added navbar to separate file and removed the separate mobile navbar
took out the mobile navbar and made the desktop navbar work the way i wanted for mobile screens.

--- a/styles.css
+++ b/styles.css
@@ -130,11 +130,12 @@ blockquote {
 
 #sticky-navbar {
     display: flex;
+    
 }
 
-#mobile-navbar {
+/* #mobile-navbar {
     display: none;
-}
+} */
 
 .navbar {
     display: flex;
@@ -146,6 +147,7 @@ blockquote {
     z-index: 999;
     padding: 0.3em;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.616);
+    transition:.5s;
 }
 
 #hamburger {
@@ -327,33 +329,43 @@ i:hover {
     }
 }
 
+@keyframes slideIn {
+    from {
+        left:-300px
+    }
+    to {
+        left:0;
+    }
+}   
+
 /* ==============
                                                                   media queries
                                                                  ================ */
 @media only screen and (max-width: 1000px) {
     .navbar {
         display: flex;
-        width: 50px;
+        width:auto;
         justify-content: center;
         position: fixed;
-        top: 40px;
+        top: 0px;
         z-index: 999;
         color: var(--clr-links);
         padding: 0.1em;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.644);
         border-radius: 0 2px 2px 0;
-        transition: 0.25s;
+        transition: .5s;
+        
     }
 
     /* hides the desktop navbar  */
-    #sticky-navbar {
+    /* #sticky-navbar {
         display: none;
-    }
+    } */
 
     /* shows the mobile hamburger navbar */
-    #mobile-navbar {
+    /* #mobile-navbar {
         display: flex;
-    }
+    } */
 
     /* this moves the theme picker icon back into the normal document flow */
     .theme {
@@ -379,27 +391,39 @@ i:hover {
         margin-top: 5em;
     }
 
-    .navbar.reveal {
+    
+
+    #sticky-navbar.reveal {
         /* this keeps the sidebar in place when revealed */
         position: fixed;
         width: 300px;
         height: 100%;
         top: 0;
+        display:flex;
+        animation: slideIn .25s;
     }
 
     #hamburger.reveal {
-        top: 35px;
-        right: -200px;
+        /* top: 35px; */
+        right: -220px;
         height: 50px;
         color: white;
     }
 
     /* hamburger is revealed */
-    #hamburger {
+    /* #hamburger {
         display: block;
         position: relative;
         color: white;
         right: 0;
+        cursor: pointer;
+    } */
+
+    #hamburger {
+        display: block;
+        position: relative;
+        color: white;
+        
         cursor: pointer;
     }
 
