--- a/styles.css
+++ b/styles.css
@@ -347,7 +347,7 @@ i:hover {
         width:auto;
         justify-content: center;
         position: fixed;
-        top: 0px;
+     
         z-index: 999;
         color: var(--clr-links);
         padding: 0.1em;
@@ -399,13 +399,14 @@ i:hover {
         width: 300px;
         height: 100%;
         top: 0;
+        left:0;
         display:flex;
         animation: slideIn .25s;
     }
 
     #hamburger.reveal {
-        /* top: 35px; */
-        right: -220px;
+        top: 5px;
+        right: -225px;
         height: 50px;
         color: white;
     }
@@ -423,7 +424,7 @@ i:hover {
         display: block;
         position: relative;
         color: white;
-        
+        padding:.25em;
         cursor: pointer;
     }
 
