--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
     font-size: 2rem;
     font-family: "Ubuntu", sans-serif;
     letter-spacing: 0.05em;
+
 }
 
 a {
@@ -56,6 +57,9 @@ a {
 p {
     /* text-indent: 1.5em; */
     line-height: 2;
+    font-size:1.6rem;
+    margin:1em 0 1em 0;
+    
 }
 
 h3 {
@@ -72,6 +76,7 @@ blockquote {
     font-style: italic;
     background: rgba(0, 0, 0, 0.582);
     padding: 1em;
+    animation:fadeIn 3s;
 }
 
 /* main grid for the website layout */
@@ -116,16 +121,103 @@ blockquote {
                                                                 main content - grid area: c
                                                                 =============================*/
 
-.grid-item-2 {
+.main-grid{
     grid-area: c;
+    width:100%;
     height: 100%;
     background: linear-gradient(rgb(0, 0, 0), rgba(10, 10, 10, 0.877)),
-        url(images/carbonfiber.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+    url(images/carbonfiber.png);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+background-attachment: fixed;
+    display:grid;
+    grid-column-gap:1em;
+    grid-template-columns: 300px 1fr 300px;
+    grid-template-rows: 50px auto;
+    grid-template-areas: 
+    " n n n "
+    " s a . ";
+   
+    padding-bottom:2em;
 }
+
+
+.main__sidebar {
+    margin-top:1em;
+    /* margin-bottom:1em; */
+    width:100%;
+    
+    /* background:rgba(240, 0, 0, 0.5); */
+    grid-area: s;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    
+    
+  }
+  
+  .main__sidebar-wrap {
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    background:var(--clr-nav);
+    /* position:sticky; */
+    border-radius:0 5px 5px 0;
+    margin-top:1em;
+   
+    top:75px;
+  }
+
+  .sidebar__h3 {
+      margin:.5em 0 0 0;
+  }
+
+  .sidebar__item-wrap {
+      width:100%;
+      display:flex;
+      flex-direction:column;
+      align-items: center;
+      padding: 0 1em 0 1em;
+  }
+
+  .sidebar__item {
+    width:100%;
+    height:200px;
+    background:rgba(238, 236, 228, 0.178);
+    margin:1em 0 1em 0;
+    border-radius:5px;
+  }
+
+
+  .post-container {
+      grid-area:a;
+      width:100%;
+      
+      display:flex;
+      align-items:flex-start;
+      justify-content: center;
+      margin-top:2em;
+      
+   
+    
+  }
+
+.newest-post {
+    height:100%;
+    max-width:80ch;
+    background: rgb(33,33,33);
+    padding:2em;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.589);
+    border-radius:5px;
+}
+
+.newest-post__p {
+    margin-top:2em;
+}
+
 /* sticky navbar for desktop*/
 
 #sticky-navbar {
@@ -138,6 +230,7 @@ blockquote {
 } */
 
 .navbar {
+    grid-area: n;
     display: flex;
     width: 100%;
     justify-content: center;
@@ -158,13 +251,14 @@ blockquote {
 .theme {
     position: absolute;
     z-index: 999;
-    left: 50px;
+    left: 150px;
 }
 
 .navbar__ul {
     display: flex;
-    width: 50%;
+    width: 800px;
     justify-content: space-around;
+    align-items: center;
     margin: 0.25em;
     padding: 0;
     list-style-type: none;
@@ -193,33 +287,13 @@ blockquote {
     color: rgb(179, 65, 255);
 }
 
-/* this wraps all the main content */
-.post-container {
-    width: 100%;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* this makes the main content fade in on page load */
-    animation: fadeIn 0.75s;
-}
 
-.newest-post {
-    margin-top: 3em;
-    margin-bottom: 4em;
-    max-width: 80ch;
-    padding: 3em 4em;
-    background: rgba(33, 33, 33);
-    border-radius: 5px;
-
-    box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.438);
-}
 
 .newest-post__h2 {
     font-size: 4rem;
     margin: 0 0 0.5em 0;
 }
+
 
 .newest-post__h3 {
     color: var(--clr-primary);
@@ -227,6 +301,16 @@ blockquote {
 
 .newest-post iframe {
     width: 100%;
+    
+   
+}
+
+.iframe-wrap {
+    width:100%;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+
 }
 
 /* this is the read more button that expands the newest post if clicked */
@@ -257,7 +341,12 @@ blockquote {
 }
 
 .newest-post--hidden.show {
-    display: block;
+    display: block; 
+}
+
+
+.newest-post--hidden.show p {
+    animation:fadeIn 3s;
 }
 
 /* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
@@ -341,9 +430,36 @@ i:hover {
 /* ==============
                                                                   media queries
                                                                  ================ */
-@media only screen and (max-width: 1000px) {
+
+@media only screen and (max-width:1500px) {
+    .newest-post {
+        width:100%;
+        margin-right:1em;
+    }
+
+    .main-grid {
+        grid-column-gap:1em;
+        grid-template-columns: 300px 1fr;
+        grid-template-rows: 50px auto;
+        grid-template-areas: 
+        "n n"
+        "s a";
+    }
+    
+    .navbar__ul {
+        width:60%;
+    }
+
+    .post-container {
+        justify-content: flex-start;
+    }
+}
+
+
+
+ @media only screen and (max-width: 1000px) {
     .navbar {
-        display: flex;
+        display: none;
         width:auto;
         justify-content: center;
         position: fixed;
@@ -356,6 +472,46 @@ i:hover {
         transition: .5s;
         
     }
+
+
+.main-grid{
+    grid-template-columns:1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+    
+    "a"
+    "s";
+    grid-gap:2em;
+    
+}
+
+.newest-post {
+    width:85%;
+    margin:0;
+}
+
+.sidebar__item-wrap {
+    width:100%;
+    padding:1em;
+    display:flex;
+    flex-direction: row;
+    
+}
+
+.sidebar__item {
+    margin:.5em;
+}
+
+.main__sidebar-wrap {
+    width:85%;
+    border-radius:5px;
+    
+    
+}
+
+.post-container {
+    justify-content: center;
+}
 
     /* hides the desktop navbar  */
     /* #sticky-navbar {
@@ -450,7 +606,41 @@ i:hover {
 /* 
                                                         media queries for iphone 8 / 9 / 10  
 */
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 600px) {
+    
+    .sidebar__h3 {
+        display:flex;
+        width:69%;
+    }
+    
+    .main-grid {
+        grid-gap: .5em;
+       
+    }
+
+
+    .newest-post {
+        width:100%;
+        margin-right:0;
+    }
+    
+    .main__sidebar-wrap {
+        width:100%;
+       
+    }
+
+    .sidebar__item {
+        margin: 0 0 1em 0;
+        width:80%;
+        height:200px;
+    }
+
+   .sidebar__item-wrap {
+       flex-direction: column;
+       padding-bottom:1em;
+   }
+    
+    
     .grid-container {
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: 125px auto 125px;
@@ -474,9 +664,9 @@ i:hover {
         margin: 1em 0 0.5em 0;
     }
 
-    .newest-post iframe {
-        height: 200px;
-    }
+    /* .newest-post iframe {
+        height:200px;
+    } */
 
     blockquote {
         font-size: 1.5rem;
@@ -606,3 +796,6 @@ i:hover {
     font-size: 2.5rem;
     color: rgb(248, 58, 0);
 }
+
+
+
