--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ background-position: center;
 background-attachment: fixed;
     display:grid;
     grid-column-gap:1em;
-    grid-template-columns: 300px 1fr 300px;
+    grid-template-columns:1fr 3fr 1fr;
     grid-template-rows: 50px auto;
     grid-template-areas: 
     " n n n "
@@ -172,6 +172,7 @@ background-attachment: fixed;
   }
 
   .sidebar__h3 {
+      font-size:2.2rem;
       margin:.5em 0 0 0;
   }
 
@@ -207,9 +208,9 @@ background-attachment: fixed;
 
 .newest-post {
     height:100%;
-    max-width:80ch;
+    width:70ch;
     background: rgb(33,33,33);
-    padding:2em;
+    padding:3em;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.589);
     border-radius:5px;
 }
@@ -299,17 +300,17 @@ background-attachment: fixed;
     color: var(--clr-primary);
 }
 
-.newest-post iframe {
+/* .newest-post iframe {
     width: 100%;
     
    
-}
+} */
 
 .iframe-wrap {
     width:100%;
     display:flex;
     align-items:center;
-    justify-content: center;
+    justify-content: flex-start;
 
 }
 
@@ -439,11 +440,11 @@ i:hover {
 
     .main-grid {
         grid-column-gap:1em;
-        grid-template-columns: 300px 1fr;
+        grid-template-columns:1fr 3fr .25fr;
         grid-template-rows: 50px auto;
         grid-template-areas: 
-        "n n"
-        "s a";
+        " n n n "
+        " s a . ";
     }
     
     .navbar__ul {
@@ -457,7 +458,7 @@ i:hover {
 
 
 
- @media only screen and (max-width: 1000px) {
+ @media only screen and (max-width: 1100px) {
     .navbar {
         display: none;
         width:auto;
@@ -610,7 +611,8 @@ i:hover {
     
     .sidebar__h3 {
         display:flex;
-        width:69%;
+        width:100%;
+        justify-content: center;
     }
     
     .main-grid {
@@ -631,7 +633,7 @@ i:hover {
 
     .sidebar__item {
         margin: 0 0 1em 0;
-        width:80%;
+        width:100%;
         height:200px;
     }
 
@@ -664,9 +666,10 @@ i:hover {
         margin: 1em 0 0.5em 0;
     }
 
-    /* .newest-post iframe {
+    .newest-post iframe {
         height:200px;
-    } */
+        width:100%;
+    }
 
     blockquote {
         font-size: 1.5rem;
