organized the css

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
                                                              1/HEADER - grid area: h
 
                                                              2/MAIN CONTENT - grid area: c
-
+                                                                a) nav
+                                                                b)sidebar
+                                                                c)main content
+                                                             
                                                              3/FOOTER - grid area: f
 
                                                              4/ANIMATIONS
@@ -47,7 +50,6 @@ body {
     font-size: 2rem;
     font-family: "Ubuntu", sans-serif;
     letter-spacing: 0.05em;
-
 }
 
 a {
@@ -57,9 +59,8 @@ a {
 p {
     /* text-indent: 1.5em; */
     line-height: 2;
-    font-size:1.6rem;
-    margin:1em 0 1em 0;
-    
+    font-size: 1.6rem;
+    margin: 1em 0 1em 0;
 }
 
 h3 {
@@ -76,7 +77,7 @@ blockquote {
     font-style: italic;
     background: rgba(0, 0, 0, 0.582);
     padding: 1em;
-    animation:fadeIn 3s;
+    animation: fadeIn 3s;
 }
 
 /* main grid for the website layout */
@@ -121,114 +122,30 @@ blockquote {
                                                                 main content - grid area: c
                                                                 =============================*/
 
-.main-grid{
+.main-grid {
     grid-area: c;
-    width:100%;
+    width: 100%;
     height: 100%;
     background: linear-gradient(rgb(0, 0, 0), rgba(10, 10, 10, 0.877)),
-    url(images/carbonfiber.png);
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-background-attachment: fixed;
-    display:grid;
-    grid-column-gap:1em;
-    grid-template-columns:1fr 3fr 1fr;
+        url(images/carbonfiber.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    display: grid;
+    grid-column-gap: 1em;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 50px auto;
-    grid-template-areas: 
-    " n n n "
-    " s a . ";
-   
-    padding-bottom:2em;
+    grid-template-areas:
+        " n n n "
+        " s a . ";
+
+    padding-bottom: 2em;
 }
 
-
-.main__sidebar {
-    margin-top:1em;
-    /* margin-bottom:1em; */
-    width:100%;
-    
-    /* background:rgba(240, 0, 0, 0.5); */
-    grid-area: s;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    
-    
-  }
-  
-  .main__sidebar-wrap {
-    width:100%;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
-    background:var(--clr-nav);
-    /* position:sticky; */
-    border-radius:0 5px 5px 0;
-    margin-top:1em;
-   
-    top:75px;
-  }
-
-  .sidebar__h3 {
-      font-size:2.2rem;
-      margin:.5em 0 0 0;
-  }
-
-  .sidebar__item-wrap {
-      width:100%;
-      display:flex;
-      flex-direction:column;
-      align-items: center;
-      padding: 0 1em 0 1em;
-  }
-
-  .sidebar__item {
-    width:100%;
-    height:200px;
-    background:rgba(238, 236, 228, 0.178);
-    margin:1em 0 1em 0;
-    border-radius:5px;
-  }
-
-
-  .post-container {
-      grid-area:a;
-      width:100%;
-      
-      display:flex;
-      align-items:flex-start;
-      justify-content: center;
-      margin-top:2em;
-      
-   
-    
-  }
-
-.newest-post {
-    height:100%;
-    width:70ch;
-    background: rgb(33,33,33);
-    padding:3em;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.589);
-    border-radius:5px;
-}
-
-.newest-post__p {
-    margin-top:2em;
-}
-
-/* sticky navbar for desktop*/
-
-#sticky-navbar {
-    display: flex;
-    
-}
-
-/* #mobile-navbar {
-    display: none;
-} */
+/* ///////////
+                                              a)  navbar
+                                             //////////// */
 
 .navbar {
     grid-area: n;
@@ -241,7 +158,7 @@ background-attachment: fixed;
     z-index: 999;
     padding: 0.3em;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.616);
-    transition:.5s;
+    transition: 0.5s;
 }
 
 #hamburger {
@@ -266,15 +183,13 @@ background-attachment: fixed;
 }
 
 /* these are the IDs for the theme/mode icon */
-#modeToggleDesktop,
-#modeToggleMobile {
+#modeToggleDesktop {
     color: var(--clr-links-secondary);
     cursor: pointer;
     transition: 1s;
 }
 
-#modeToggleDesktop.light-theme,
-#modeToggleMobile.light-theme {
+#modeToggleDesktop.light-theme {
     color: var(--clr-links);
     transform: rotate(180deg);
 }
@@ -288,13 +203,98 @@ background-attachment: fixed;
     color: rgb(179, 65, 255);
 }
 
+/*======== 
+                                                     b)SIDEBAR
+                                                    ///////////*/
 
+.main__sidebar {
+    margin-top: 1em;
+    /* margin-bottom:1em; */
+    width: 100%;
+
+    /* background:rgba(240, 0, 0, 0.5); */
+    grid-area: s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main__sidebar-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: var(--clr-nav);
+    /* position:sticky; */
+    border-radius: 0 5px 5px 0;
+    margin-top: 1em;
+
+    top: 75px;
+}
+
+.sidebar__h3 {
+    font-size: 2.2rem;
+    margin: 0.5em 0 0 0;
+}
+
+.sidebar__item-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 1em 0 1em;
+}
+
+.sidebar__item {
+    width: 100%;
+    height: 200px;
+    background: rgba(238, 236, 228, 0.178);
+    margin: 1em 0 1em 0;
+    border-radius: 5px;
+}
+
+/*////////////// 
+                                                c) MAIN ARTICLE 
+                                                ///////////////*/
+/* this is the main section that wraps the article */
+.post-container {
+    grid-area: a;
+    width: 100%;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 2em;
+}
+
+.newest-post {
+    height: 100%;
+    width: 70ch;
+    background: rgb(33, 33, 33);
+    padding: 3em;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.589);
+    border-radius: 5px;
+}
+
+.newest-post__p {
+    margin-top: 2em;
+}
+
+/* sticky navbar for desktop*/
+
+#sticky-navbar {
+    display: flex;
+}
+
+/* #mobile-navbar {
+    display: none;
+} */
 
 .newest-post__h2 {
     font-size: 4rem;
     margin: 0 0 0.5em 0;
 }
-
 
 .newest-post__h3 {
     color: var(--clr-primary);
@@ -307,11 +307,10 @@ background-attachment: fixed;
 } */
 
 .iframe-wrap {
-    width:100%;
-    display:flex;
-    align-items:center;
+    width: 100%;
+    display: flex;
+    align-items: center;
     justify-content: flex-start;
-
 }
 
 /* this is the read more button that expands the newest post if clicked */
@@ -342,12 +341,11 @@ background-attachment: fixed;
 }
 
 .newest-post--hidden.show {
-    display: block; 
+    display: block;
 }
 
-
 .newest-post--hidden.show p {
-    animation:fadeIn 3s;
+    animation: fadeIn 3s;
 }
 
 /* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
@@ -421,34 +419,34 @@ i:hover {
 
 @keyframes slideIn {
     from {
-        left:-300px
+        left: -300px;
     }
     to {
-        left:0;
+        left: 0;
     }
-}   
+}
 
 /* ==============
                                                                   media queries
                                                                  ================ */
 
-@media only screen and (max-width:1500px) {
+@media only screen and (max-width: 1500px) {
     .newest-post {
-        width:100%;
-        margin-right:1em;
+        width: 100%;
+        margin-right: 1em;
     }
 
     .main-grid {
-        grid-column-gap:1em;
-        grid-template-columns:1fr 3fr .25fr;
+        grid-column-gap: 1em;
+        grid-template-columns: 1fr 3fr 0.25fr;
         grid-template-rows: 50px auto;
-        grid-template-areas: 
-        " n n n "
-        " s a . ";
+        grid-template-areas:
+            " n n n "
+            " s a . ";
     }
-    
+
     .navbar__ul {
-        width:60%;
+        width: 60%;
     }
 
     .post-container {
@@ -456,63 +454,54 @@ i:hover {
     }
 }
 
-
-
- @media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1100px) {
     .navbar {
         display: none;
-        width:auto;
+        width: auto;
         justify-content: center;
         position: fixed;
-     
+
         z-index: 999;
         color: var(--clr-links);
         padding: 0.1em;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.644);
         border-radius: 0 2px 2px 0;
-        transition: .5s;
-        
+        transition: 0.5s;
     }
 
+    .main-grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+        grid-template-areas:
+            "a"
+            "s";
+        grid-gap: 2em;
+    }
 
-.main-grid{
-    grid-template-columns:1fr;
-    grid-template-rows: auto auto;
-    grid-template-areas: 
-    
-    "a"
-    "s";
-    grid-gap:2em;
-    
-}
+    .newest-post {
+        width: 85%;
+        margin: 0;
+    }
 
-.newest-post {
-    width:85%;
-    margin:0;
-}
+    .sidebar__item-wrap {
+        width: 100%;
+        padding: 1em;
+        display: flex;
+        flex-direction: row;
+    }
 
-.sidebar__item-wrap {
-    width:100%;
-    padding:1em;
-    display:flex;
-    flex-direction: row;
-    
-}
+    .sidebar__item {
+        margin: 0.5em;
+    }
 
-.sidebar__item {
-    margin:.5em;
-}
+    .main__sidebar-wrap {
+        width: 85%;
+        border-radius: 5px;
+    }
 
-.main__sidebar-wrap {
-    width:85%;
-    border-radius:5px;
-    
-    
-}
-
-.post-container {
-    justify-content: center;
-}
+    .post-container {
+        justify-content: center;
+    }
 
     /* hides the desktop navbar  */
     /* #sticky-navbar {
@@ -548,17 +537,15 @@ i:hover {
         margin-top: 5em;
     }
 
-    
-
     #sticky-navbar.reveal {
         /* this keeps the sidebar in place when revealed */
         position: fixed;
         width: 300px;
         height: 100%;
         top: 0;
-        left:0;
-        display:flex;
-        animation: slideIn .25s;
+        left: 0;
+        display: flex;
+        animation: slideIn 0.25s;
     }
 
     #hamburger.reveal {
@@ -581,7 +568,7 @@ i:hover {
         display: block;
         position: relative;
         color: white;
-        padding:.25em;
+        padding: 0.25em;
         cursor: pointer;
     }
 
@@ -608,41 +595,36 @@ i:hover {
                                                         media queries for iphone 8 / 9 / 10  
 */
 @media only screen and (max-width: 600px) {
-    
     .sidebar__h3 {
-        display:flex;
-        width:100%;
+        display: flex;
+        width: 100%;
         justify-content: center;
     }
-    
-    .main-grid {
-        grid-gap: .5em;
-       
-    }
 
+    .main-grid {
+        grid-gap: 0.5em;
+    }
 
     .newest-post {
-        width:100%;
-        margin-right:0;
+        width: 100%;
+        margin-right: 0;
     }
-    
+
     .main__sidebar-wrap {
-        width:100%;
-       
+        width: 100%;
     }
 
     .sidebar__item {
         margin: 0 0 1em 0;
-        width:100%;
-        height:200px;
+        width: 100%;
+        height: 200px;
     }
 
-   .sidebar__item-wrap {
-       flex-direction: column;
-       padding-bottom:1em;
-   }
-    
-    
+    .sidebar__item-wrap {
+        flex-direction: column;
+        padding-bottom: 1em;
+    }
+
     .grid-container {
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: 125px auto 125px;
@@ -667,8 +649,8 @@ i:hover {
     }
 
     .newest-post iframe {
-        height:200px;
-        width:100%;
+        height: 200px;
+        width: 100%;
     }
 
     blockquote {
@@ -799,6 +781,3 @@ i:hover {
     font-size: 2.5rem;
     color: rgb(248, 58, 0);
 }
-
-
-
