--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,16 @@ html {
 }
 
 body {
-    background: rgb(14, 14, 14);
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.904),
+        rgba(10, 10, 10, 0.925)
+    ),
+    url(images/carbonfiber.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    
     width: 100%;
     height: 100vh;
     margin: 0;
@@ -103,7 +112,7 @@ blockquote {
   }
 /* this are the grid items */
   .grid-container__header {
-    background: linear-gradient(
+    /* background: linear-gradient(
         rgba(0, 0, 0, 0.712),
         rgba(10, 10, 10, 0.877)
     ),
@@ -111,7 +120,7 @@ blockquote {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: fixed; */
     display: flex;
     justify-content: center;
     
@@ -173,6 +182,7 @@ blockquote {
      height:37px;
      background:var(--clr-nav);
      position:sticky;
+     z-index:999;
      top:0;
  }
 
@@ -186,7 +196,7 @@ blockquote {
     top: 0;
     z-index: 999;
     padding: 0.3em;
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.616); */
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.616);
     /* transition: 0.5s; */
 }
 
@@ -630,6 +640,22 @@ i:hover {
     blockquote {
         font-size: 1.5rem;
         margin: 0.5em;
+    }
+
+
+
+    .grid-container__header {
+        background: linear-gradient(
+            rgba(0, 0, 0, 0.712),
+            rgba(10, 10, 10, 0.877)
+        ),
+        url(images/carbonfiber.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: fixed;
+
+
     }
 
   }
