--- a/styles.css
+++ b/styles.css
@@ -262,19 +262,30 @@ blockquote {
   
   .main-content__sidebar {
     grid-area: s;
-    background:var(--clr-dark);
+    background:rgb(20,20,20);
     padding:0 1em 1em 1em;
   /*   display:flex;
     flex-direction:column; */
     
   }
-  
-  .sidebar__itemWrap {
+
+  .sidebar__h3 {
+    color:var(--clr-accent);
+    padding:.5em 0 0 0;
+    
+}
+
+  .sidebar-wrap {
+    position:sticky;
+    top:3em;
+  }
+
+
+  .sidebar__item-wrap   {
     /* background:rgba(33,33,33,.5); */
     display:flex;
     flex-direction:column;
-    position:sticky;
-    top:2em;
+   
   }
   
   .sidebar__item {
@@ -366,23 +377,24 @@ blockquote {
 
 /* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
 #backToTop {
-    display: none;
     cursor: pointer;
-
+    border: solid var(--clr-primary) 2px;
     text-align: center;
-    padding: 0.25em;
+    padding: 0.5em;
     border-radius: 999px;
     text-decoration: none;
-    color: #3282a1;
+    color: var(--clr-primary);
     transition: 0.25s;
-
+    display: none;
     justify-content: center;
-    width: 19%;
+    width: 100%;
     margin: auto;
 }
 
 #backToTop:hover {
     color: white;
+
+    background: var(--clr-primary);
 }
   
   
@@ -458,10 +470,15 @@ i:hover {
 }
 
 
+.sidebar__h3 {
+    padding:1em 0 0 1em;
+    font-size:3rem;
+    
+}
 
     
-    .sidebar__itemWrap {
-    background:rgba(33,33,33,.5);
+.sidebar__item-wrap {
+    /* background:rgba(33,33,33,.5); */
     display:flex;
     flex-direction:row;
   
@@ -470,6 +487,8 @@ i:hover {
       
     
   }
+
+
     
     .sidebar__item {
     height:200px;
@@ -615,7 +634,7 @@ i:hover {
   
   
   @media only screen and (max-width:750px) {
-    .sidebar__itemWrap {
+    .sidebar__item-wrap  {
        flex-direction:column;
     }
     
