--- a/styles.css
+++ b/styles.css
@@ -215,8 +215,8 @@ blockquote {
 
 .navbar__ul {
     display: flex;
-    width: 800px;
-    justify-content: space-around;
+    width: 440px;
+    justify-content: space-between;
     align-items: center;
     margin: 0.25em;
     padding: 0;
@@ -256,7 +256,7 @@ blockquote {
     grid-template-areas: "s a";
     /* background:var(--clr-dark); */
     width:auto; 
-    margin:1em;
+    margin:2em;
     grid-gap:.25em;
   }
   
