--- a/styles.css
+++ b/styles.css
@@ -6,22 +6,22 @@
                                                             =================*/
 
 :root {
-    --clr-primary: #3282a1;
+    /* --clr-primary: #3282a1;
     --clr-accent: #229ccc;
     --clr-nav: #0b1f25;
     --clr-highlight: lightgoldenrodyellow;
     --clr-links: lightskyblue;
     --clr-content-bg: rgb(33,33,33);
-    --clr-background: rgb(15,15,15);
+    --clr-background: rgb(15,15,15); */
 
     /* second color scheme */
-    /* --clr-primary: #bea0d3;
+    --clr-primary: #bea0d3;
     --clr-accent: #229ccc;
     --clr-nav: #201925;
     --clr-highlight: lightgoldenrodyellow;
     --clr-links: #61baad;
     --clr-content-bg: rgb(33,33,33);
-    --clr-background: rgb(15,15,15); */
+    --clr-background: rgb(15,15,15);
 }
 
 html {
@@ -249,9 +249,9 @@ blockquote {
 
 .main-content__grid {
     display:grid;
-    grid-template-columns: minmax(200px, 250px) minmax(500px, 800px)  minmax(200px, 250px);
+    grid-template-columns: minmax(200px, 250px) minmax(500px, 750px)  minmax(200px, 250px);
     grid-template-rows: 1fr;
-    grid-template-areas: "s a .";
+    grid-template-areas: ". a s";
     /* background:var(--clr-dark); */
     width:auto; 
     margin:2em;
@@ -281,8 +281,9 @@ blockquote {
   
     position:sticky;
     top:1em;
-    background:var(--clr-content-bg);
+    background:rgba(33,33,33,.5);
     padding: .5em;
+    border-radius:5px;
   }
 
 
@@ -358,14 +359,14 @@ blockquote {
     transition: 0.25s;
     display: flex;
     justify-content: center;
-    width: 100%;
-    margin: auto;
+    /* width: 100%; */
+    margin: 1em;
 }
 
 #newest-post__button:hover {
     color: white;
 
-    background: var(--clr-links);
+    background: var(--clr-accent);
 }
 
 /* when the "read more" button is clicked, the .show class is toggled on or off */
@@ -393,14 +394,14 @@ blockquote {
     transition: 0.25s;
     display: none;
     justify-content: center;
-    width: 100%;
-    margin: auto;
+    /* width: 100%; */
+    margin: 1em;
 }
 
 #backToTop:hover {
     color: white;
 
-    background: var(--clr-links);
+    background: var(--clr-accent);
 }
   
   
@@ -408,14 +409,23 @@ blockquote {
   .main-content__article {
     grid-area: a;
     background:var(--clr-content-bg);
-    padding:1em 2em 1em 2em;
+    padding:1em;
+    border-radius:5px;
     
     
   }
 
+
+  .iframe-wrap {
+      
+      width:100%;
+  }
+
+
   .main-content__article iframe {
       margin-top:1em;
-      width:100%;
+     max-width:560px;
+     width:100%;
   }
   
   .article__content {
@@ -449,23 +459,23 @@ blockquote {
 }
 
 i {
-    color: white;
+    color: var(--clr-links);
     /* transform: scale(200%); */
     transition: 0.25s;
 }
 
 i:hover {
     /* transform: scale(230%); */
-    color: var(--clr-primary);
+    color: var(--clr-highlight);
 }
   
 
     @media only screen and (max-width:1200px) {
         .main-content__grid {
             display:grid;
-            grid-template-columns: minmax(200px, 250px) minmax(500px, 800px);
+            grid-template-columns: minmax(500px, 750px)  minmax(200px, 250px);
             grid-template-rows: 1fr;
-            grid-template-areas: "s a";
+            grid-template-areas: "a s";
           }
     }
   
@@ -522,7 +532,7 @@ i:hover {
    
     text-align: center;
     padding:1em 0 0 0;
-    font-size:3rem;    
+    font-size:2.6rem;    
 }
 
 
@@ -604,7 +614,7 @@ i:hover {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        margin-right: 1.5em;
+        /* margin-right: 1.5em; */
         text-align: center;
     }
 
@@ -622,12 +632,15 @@ i:hover {
         top: 0;
         left: 0;
         display: flex;
+        align-items:center;
+        flex-direction: column;
+       
         animation: slideIn 0.25s;
     }
 
     #hamburger.reveal {
         /* top: 45px; */
-        right: -260px;
+        right: -125px;
         height: 50px;
         color: white;
     }
@@ -741,7 +754,7 @@ i:hover {
     }
     .main-content__article iframe {
         height: 200px;
-        
+        width:100%;
         
     }
   }
