--- a/styles.css
+++ b/styles.css
@@ -360,13 +360,13 @@ blockquote {
     display: flex;
     justify-content: center;
     /* width: 100%; */
-    margin: 1em;
+    margin: 1em 0 1em 0;
 }
 
 #newest-post__button:hover {
-    color: white;
-
-    background: var(--clr-accent);
+    color: var(--clr-nav);
+    border: solid var(--clr-primary);
+    background: var(--clr-primary);
 }
 
 /* when the "read more" button is clicked, the .show class is toggled on or off */
@@ -395,13 +395,13 @@ blockquote {
     display: none;
     justify-content: center;
     /* width: 100%; */
-    margin: 1em;
+    margin: 1em 0 1em 0;
 }
 
 #backToTop:hover {
-    color: white;
-
-    background: var(--clr-accent);
+    color: var(--clr-nav);
+    border: solid var(--clr-primary);
+    background: var(--clr-primary);
 }
   
   
@@ -415,15 +415,19 @@ blockquote {
     
   }
 
-
-  .iframe-wrap {
-      
-      width:100%;
+  .title-wrap {
+      text-align: center;
   }
 
 
+  /* .iframe-wrap {
+      
+      width:100%;
+  } */
+
+
   .main-content__article iframe {
-      margin-top:1em;
+    margin:1em auto;
      max-width:560px;
      width:100%;
   }
@@ -495,7 +499,7 @@ i:hover {
   }
 
   .main-content__article iframe {
-   
+    max-width:560px;
     width:100%;
     
 }
@@ -752,10 +756,25 @@ i:hover {
 
 
     }
+
+
+    .title-wrap {
+        text-align: unset;
+    }
+
+
     .main-content__article iframe {
-        height: 200px;
-        width:100%;
         
+        width:100%;
+        max-width:560px;
+        margin:1em 0 0 0;
+    }
+  }
+
+  @media only screen and (max-width:414px) {
+    .main-content__article iframe {
+        
+       height:200px;
     }
   }
 
