--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,39 @@
 /* ===============
-                                                               
+                                                               HEADER
+
+                                                               NAVBAR
+
+                                                               SIDEBAR
+
+                                                               MAINCONTENT
+
+                                                               FOOTER
+                                                               --------------
+                                                               media queries
+
+                                                               animations
 
                                                  
 
                                                             =================*/
 
 :root {
-    /* --clr-primary: #3282a1;
+    --clr-primary: #3282a1;
     --clr-accent: #229ccc;
     --clr-nav: #0b1f25;
     --clr-highlight: lightgoldenrodyellow;
     --clr-links: lightskyblue;
-    --clr-content-bg: rgb(33,33,33);
-    --clr-background: rgb(15,15,15); */
+    --clr-content-bg: rgb(33, 33, 33);
+    --clr-background: rgb(15, 15, 15);
 
     /* second color scheme */
-    --clr-primary: #bea0d3;
+    /* --clr-primary: #bea0d3;
     --clr-accent: #229ccc;
     --clr-nav: #201925;
     --clr-highlight: lightgoldenrodyellow;
     --clr-links: #61baad;
     --clr-content-bg: rgb(33,33,33);
-    --clr-background: rgb(15,15,15);
+    --clr-background: rgb(15,15,15); */
 }
 
 html {
@@ -31,7 +43,6 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     scroll-behavior: smooth;
-   
 }
 
 * {
@@ -39,9 +50,8 @@ html {
 }
 
 body {
-    background-color:black;
- 
-    
+    background-color: black;
+
     width: 100%;
     height: 100vh;
     margin: 0;
@@ -53,7 +63,7 @@ body {
 
 a {
     text-decoration: none;
-    font-size:1.6rem;
+    font-size: 1.6rem;
 }
 
 p {
@@ -63,11 +73,10 @@ p {
     margin: 1em 0 1em 0;
 }
 
-
 h1,
 h2,
 h3 {
-    margin:0;
+    margin: 0;
     font-weight: 400;
     color: var(--clr-highlight);
 }
@@ -82,23 +91,23 @@ blockquote {
     font-style: italic;
     background: rgba(0, 0, 0, 0.582);
     padding: 1em;
-    margin:0;
+    margin: 0;
     animation: fadeIn 3s;
 }
 
-
-
-  
-  /* this is the main grid that defines the header / main body / footer */
-  .grid-container {
-    height:100%;
-    display:grid;
+/*======================================================================
+ this is the main grid that defines the header / main body / footer 
+=======================================================================*/
+.grid-container {
+    height: 100%;
+    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 125px auto 100px;
-  }
-/* this are the grid items */
-  .grid-container__header {
-    background:var(--clr-background);
+}
+/* header
+------------------------------------------*/
+.grid-container__header {
+    background: var(--clr-background);
     /* background: linear-gradient(
         rgba(0, 0, 0, 0.712),
         rgba(10, 10, 10, 0.877)
@@ -110,11 +119,19 @@ blockquote {
     background-attachment: fixed; */
     display: flex;
     justify-content: center;
-    
-  }
-  
-  .grid-container__main-content {
-      background:var(--clr-background);
+}
+
+/* main content - this is grid item that holds the navbar / sidebar / main article 
+-----------------------------------------------------------------------------------*/
+.grid-container__main-content {
+    background: var(--clr-background);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content:center; */
+    align-items: center;
+    /* this makes all the text white */
+    color: white;
     /* background: linear-gradient(
         rgba(0, 0, 0, 0.904),
         rgba(10, 10, 10, 0.925)
@@ -124,34 +141,33 @@ blockquote {
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed; */
-  }
-  
-  .grid-container__footer {
+}
+/* footer 
+--------------------------------------------*/
+.grid-container__footer {
     background: var(--clr-nav);
+}
 
-  }
-  
+/*================================================================= 
+this is the inner grid that holds the main article and sidebar
+===================================================================*/
+.main-content__grid {
+    display: grid;
+    grid-template-columns: minmax(200px, 250px) minmax(500px, 750px) minmax(
+            200px,
+            250px
+        );
+    grid-template-rows: 1fr;
+    grid-template-areas: ". a s";
+    /* background:var(--clr-dark); */
+    width: auto;
+    margin: 2em;
+    grid-gap: 1em;
+}
 
-  
-  /* this is the main area that holds the navbar / sidebar / main article */
-  .grid-container__main-content {
-    width:100%;
-    display:flex;
-    flex-direction:column;
-    /* justify-content:center; */
-    align-items:center;
-    /* this makes all the text white */
-    color:white;
-  }
-
-
-
-
-
-                                                /* /////////////
+/* /////////////////////////////////////////////////////////////
                                                     HEADER
                                                 ///////////// */
- 
 
 .header__logo {
     height: 100%;
@@ -164,26 +180,22 @@ blockquote {
     object-fit: contain;
 }
 
+/*////////// 
+                                                    navbar
+                                                 //////////*/
 
-
-
-
-
-                                                    /*////////// 
-                                                       navbar
-                                                    //////////*/
- 
- /* this provides a background place holder after the hamburger is clicked and the navbar moves */
+/* this provides a background place holder after the hamburger is clicked and the navbar moves */
 .nav-wrap {
-     width:100%;
-     height:37px;
-     background:var(--clr-nav);
-     /* position:sticky;
+    width: 100%;
+    height: 37px;
+    background: var(--clr-nav);
+    /* position:sticky;
      z-index:999;
      top:0; */
- }
+}
 
-  .sticky-nav{
+/* this is the grid area for the navbar - grid area n */
+.sticky-nav {
     grid-area: n;
     display: flex;
     width: 100%;
@@ -197,6 +209,10 @@ blockquote {
     /* transition: 0.5s; */
 }
 
+/* #sticky-navbar {
+    display: flex;
+} */
+
 #hamburger {
     display: none;
 }
@@ -205,13 +221,13 @@ blockquote {
 .theme {
     position: absolute;
     z-index: 999;
-    left:50px;
+    left: 50px;
 }
 
 .navbar__ul {
     display: flex;
     width: 50%;
-    max-width:700px;
+    max-width: 700px;
     justify-content: space-between;
     align-items: center;
     margin: 0.25em;
@@ -225,11 +241,11 @@ blockquote {
     cursor: pointer;
     transition: 1s;
 }
-
+/* 
 #modeToggleDesktop.light-theme {
     color: var(--clr-highlight);
     transform: rotate(180deg);
-}
+} */
 
 .navbar__ul a {
     color: var(--clr-links);
@@ -237,99 +253,80 @@ blockquote {
 }
 
 .navbar__ul a:hover {
-    color:var(--clr-highlight);
+    color: var(--clr-highlight);
 }
 
+/* ///////////
+                                                   SIDEBAR
+                                                ///////////*/
 
-
-
-
-  
-/* main content grid */
-
-.main-content__grid {
-    display:grid;
-    grid-template-columns: minmax(200px, 250px) minmax(500px, 750px)  minmax(200px, 250px);
-    grid-template-rows: 1fr;
-    grid-template-areas: ". a s";
-    /* background:var(--clr-dark); */
-    width:auto; 
-    margin:2em;
-    grid-gap:1em;
-  }
-  
-  .main-content__sidebar {
+/* GRID AREA - S --this is the grid area for the sidebar */
+.main-content__sidebar {
     grid-area: s;
-   
+
     /* background:var(--clr-dark); */
     /* padding:0 1em 1em 1em; */
-  /*   display:flex;
+    /*   display:flex;
     flex-direction:column; */
-    
-  }
-
-  .sidebar__h3 {
-    
-    font-weight:400;
-    text-align: center;
-    padding:1em 0 0 0;
-    font-size:2rem;    
 }
 
+.sidebar__h3 {
+    font-weight: 400;
+    text-align: center;
+    padding: 1em 0 0 0;
+    font-size: 2rem;
+}
 
-  .sidebar-wrap {
-  
-    position:sticky;
-    top:1em;
-    background:rgba(33,33,33,.5);
-    padding: .5em;
-    border-radius:5px;
-  }
-
-
-  .sidebar__item-wrap   {
-    /* background:rgba(33,33,33,.5); */
-    display:flex;
-    flex-direction:column;
-    
-   
-  }
-  
-  .sidebar__item {
-    /* height:200px; */
-    width:100%;
-    background:var(--clr-nav);
-    margin-top:1em;
-   
-  }
-
-
-                                                 /* /////////////
-                                                     MAIN CONTENT
-                                                   ////////////// */
-
-.newest-post {
-    height: 100%;
-    /* width: 70ch; */
-    background: rgb(33, 33, 33);
-    padding: 3em;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.589);
+/* this wraps the sidebar title and items */
+.sidebar-wrap {
+    position: sticky;
+    top: 1em;
+    background: rgba(33, 33, 33, 0.5);
+    padding: 0.5em;
     border-radius: 5px;
 }
 
-.newest-post__p {
-    margin: 1em 0 0 0;
-}
-
-/* sticky navbar for desktop*/
-
-#sticky-navbar {
+/* this wraps just the sidebar items */
+.sidebar__item-wrap {
+    /* background:rgba(33,33,33,.5); */
     display: flex;
+    flex-direction: column;
 }
 
-/* #mobile-navbar {
-    display: none;
-} */
+.sidebar__item {
+    /* height:200px; */
+    width: 100%;
+    background: var(--clr-nav);
+    margin-top: 1em;
+}
+
+/* /////////////
+                                                MAIN CONTENT
+                                              ////////////// */
+
+/* GRID AREA - A -- this is the container for the main article */
+.newest-post {
+    grid-area: a;
+    background: var(--clr-content-bg);
+    padding: 1em;
+    border-radius: 5px;
+}
+
+/* this is the flex container that holds the main article and its content - centers the video and title */
+.newest-post__content-wrap {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.newest-post__p {
+    margin: 0;
+}
+
+/* this wraps the newest post title + date */
+.title-wrap {
+    text-align: start;
+}
 
 .newest-post__h2 {
     font-size: 3.5rem;
@@ -340,12 +337,29 @@ blockquote {
     color: var(--clr-links);
 }
 
-/* .newest-post iframe {
+.newest-post iframe {
+    /* margin: 1em auto; */
+    margin: 1em 0 1em 0;
+    max-width: 560px;
     width: 100%;
-    
-   
-} */
+}
 
+.newest-post__content p {
+    max-width: 85ch;
+}
+
+/* when the "read more" button is clicked, the .show class is toggled on or off */
+.newest-post--hidden {
+    display: none;
+}
+
+.newest-post--hidden.show {
+    display: block;
+}
+
+.newest-post--hidden.show p {
+    animation: fadeIn 3s;
+}
 
 /* this is the read more button that expands the newest post if clicked */
 #newest-post__button {
@@ -369,19 +383,6 @@ blockquote {
     background: var(--clr-primary);
 }
 
-/* when the "read more" button is clicked, the .show class is toggled on or off */
-.newest-post--hidden {
-    display: none;
-}
-
-.newest-post--hidden.show {
-    display: block;
-}
-
-.newest-post--hidden.show p {
-    animation: fadeIn 3s;
-}
-
 /* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
 #backToTop {
     cursor: pointer;
@@ -403,48 +404,8 @@ blockquote {
     border: solid var(--clr-primary);
     background: var(--clr-primary);
 }
-  
-  
-  
-  .main-content__article {
-    grid-area: a;
-    background:var(--clr-content-bg);
-    padding:1em;
-    border-radius:5px;
-    
-    
-  }
 
-  .title-wrap {
-      text-align: center;
-  }
-
-
-  /* .iframe-wrap {
-      
-      width:100%;
-  } */
-
-
-  .main-content__article iframe {
-    margin:1em auto;
-     max-width:560px;
-     width:100%;
-  }
-  
-  .article__content {
-      display:flex;
-      flex-direction:column;
-      height:100%;
-  }
-  
-  
-  .article__content p {
-    max-width:85ch;
-  }
-
-
-                                            /* //////////
+/* //////////
                                                 FOOTER
                                              /////////// */
 
@@ -472,99 +433,83 @@ i:hover {
     /* transform: scale(230%); */
     color: var(--clr-highlight);
 }
-  
 
-    @media only screen and (max-width:1200px) {
-        .main-content__grid {
-            display:grid;
-            grid-template-columns: minmax(500px, 750px)  minmax(200px, 250px);
-            grid-template-rows: 1fr;
-            grid-template-areas: "a s";
-          }
-    }
-  
+/*////////////////  
+                                            MEDIA QUERIES
+                                        ////////////////// */
 
-  
-  @media only screen and (max-width:900px) {
+@media only screen and (max-width: 1200px) {
     .main-content__grid {
-    display:grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    grid-template-areas: "a"
-                         "s";
-    background:none;
-    margin:1em;
-    grid-gap:1em;
-  
-  }
-
-  .main-content__article iframe {
-    max-width:560px;
-    width:100%;
-    
+        display: grid;
+        grid-template-columns: minmax(500px, 750px) minmax(200px, 250px);
+        grid-template-rows: 1fr;
+        grid-template-areas: "a s";
+    }
 }
 
-
-
-
-
-
-    
-.sidebar__item-wrap {
-    /* background:rgba(33,33,33,.5); */
-    display:flex;
-    flex-direction:row;
-  
-      align-items:center;
-      justify-content:space-between;
-      
-    
-  }
-
-  .main-content__sidebar {
-    grid-area: s;
-    /* background:rgb(20,20,20); */
-    background:var(--clr-content-bg);
-    padding:0;
-  /*   display:flex;
-    flex-direction:column; */
-    
-  }
-
-  .sidebar__h3 {
-    /* color:var(--clr-accent); */
-   
-    text-align: center;
-    padding:1em 0 0 0;
-    font-size:2.6rem;    
-}
-
-
-    
-    .sidebar__item {
-    height:200px;
-    width:200px;
-    background:var(--clr-nav);
-    margin:.5em;
+@media only screen and (max-width: 900px) {
+    .main-content__grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+        grid-template-areas:
+            "a"
+            "s";
+        background: none;
+        margin: 1em;
+        grid-gap: 1em;
     }
 
+    .newest-post iframe {
+        max-width: 560px;
+        width: 100%;
+    }
 
+    .sidebar__item-wrap {
+        /* background:rgba(33,33,33,.5); */
+        display: flex;
+        flex-direction: row;
 
+        align-items: center;
+        justify-content: space-between;
+    }
 
+    .main-content__sidebar {
+        grid-area: s;
+        /* background:rgb(20,20,20); */
+        background: var(--clr-content-bg);
+        padding: 0;
+        /*   display:flex;
+    flex-direction:column; */
+    }
 
+    .sidebar__h3 {
+        /* color:var(--clr-accent); */
+
+        text-align: center;
+        padding: 1em 0 0 0;
+        font-size: 2.6rem;
+    }
+
+    .sidebar__item {
+        height: 200px;
+        width: 200px;
+        background: var(--clr-nav);
+        margin: 0.5em;
+    }
 
     /* import */
     .sticky-nav {
         display: flex;
         width: 100%;
         justify-content: flex-start;
-        position:sticky;
+        position: sticky;
 
         z-index: 999;
         color: var(--clr-highlight);
         padding: 0.1em;
         /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.644); */
-       
+
         /* transition: 0.5s; */
     }
 
@@ -575,11 +520,6 @@ i:hover {
             "a"
             "s";
         grid-gap: 2em;
-    }
-
-    .newest-post {
-        width: 85%;
-        margin: 0;
     }
 
     .sidebar__item-wrap {
@@ -598,19 +538,13 @@ i:hover {
         border-radius: 5px;
     }
 
-    .post-container {
+    /* .post-container {
         justify-content: center;
-    }
-
-
+    } */
 
     /* this moves the theme picker icon back into the normal document flow */
     .theme {
         position: initial;
-    }
-
-    .newest-post {
-        padding: 1em;
     }
 
     /* this is the navbar for mobile that gets revealed when switching to mobile sizes */
@@ -636,9 +570,9 @@ i:hover {
         top: 0;
         left: 0;
         display: flex;
-        align-items:center;
+        align-items: center;
         flex-direction: column;
-       
+
         animation: slideIn 0.25s;
     }
 
@@ -650,12 +584,12 @@ i:hover {
     }
 
     .nav-wrap {
-        width:100%;
-        height:37px;
-        background:var(--clr-nav);
-        position:sticky;
-        z-index:999;
-        top:0;
+        width: 100%;
+        height: 37px;
+        background: var(--clr-nav);
+        position: sticky;
+        z-index: 999;
+        top: 0;
     }
 
     /* hamburger is revealed */
@@ -693,40 +627,34 @@ i:hover {
         width: 100%;
     }
 
-    #newest-post__button{
-        margin:1em 0 1em 0;
+    #newest-post__button {
+        margin: 1em 0 1em 0;
     }
-   
-  }
-  
-    
-  
-  
-  @media only screen and (max-width:750px) {
-    .sidebar__item-wrap  {
-       flex-direction:column;
-    }
-    
-    .sidebar__item {
-        height:200px;
-        width:100%;
-        margin:.5em;
-    
-  }
-
-  .sidebar__h3 {
-    /* color:var(--clr-accent); */
-   
-    text-align: start;
-    padding:1em 0 0 .75em;
-       
 }
 
-    .main-content__grid {
-        margin:0;
+@media only screen and (max-width: 750px) {
+    .sidebar__item-wrap {
+        flex-direction: column;
     }
 
-    .main-content__article {
+    .sidebar__item {
+        height: 200px;
+        width: 100%;
+        margin: 0.5em;
+    }
+
+    .sidebar__h3 {
+        /* color:var(--clr-accent); */
+
+        text-align: start;
+        padding: 1em 0 0 0.75em;
+    }
+
+    .main-content__grid {
+        margin: 0;
+    }
+
+    .newest-post {
         margin-top: 0;
         padding: 0.75em;
     }
@@ -735,50 +663,41 @@ i:hover {
         margin: 1em 0 0.5em 0;
     }
 
- 
     blockquote {
         font-size: 1.5rem;
         margin: 0.5em;
     }
 
-
-
     .grid-container__header {
         background: linear-gradient(
-            rgba(0, 0, 0, 0.712),
-            rgba(10, 10, 10, 0.877)
-        ),
-        url(images/carbonfiber.png);
+                rgba(0, 0, 0, 0.712),
+                rgba(10, 10, 10, 0.877)
+            ),
+            url(images/carbonfiber.png);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         background-attachment: fixed;
-
-
     }
-
 
     .title-wrap {
         text-align: unset;
     }
 
-
-    .main-content__article iframe {
-        
-        width:100%;
-        max-width:560px;
-        margin:1em 0 0 0;
+    .newest-post iframe {
+        width: 100%;
+        max-width: 560px;
+        margin: 1em 0 1em 0;
     }
-  }
+}
 
-  @media only screen and (max-width:414px) {
-    .main-content__article iframe {
-        
-       height:200px;
+@media only screen and (max-width: 414px) {
+    .newest-post iframe {
+        height: 200px;
     }
-  }
+}
 
-  /*========= 
+/*========= 
                                                                    animations 
                                                                  =============*/
 
