javaScript cleanup of the lightmode toggle

--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ this is the inner grid that holds the main article and sidebar
     grid-gap: 1em;
 }
 
-/* /////////////////////////////////////////////////////////////
+/* ///////////
                                                     HEADER
                                                 ///////////// */
 
